corpus/kwdpaths.txt
===
Keyword paths
===

foo:bar
foo:bar:baz

---

(source
  (subbind
    form: (symbol)
    keyword: (keyword))
  (subbind
    form:
      (subbind
        form: (symbol)
        keyword: (keyword))
    keyword: (keyword)))
