corpus/lists.txt
===
Lists
===

()
(:a 1)
(:a 1 :b 2)
(parent)
(parent1 parent2 :a 1 :b 2)

---

(source
  (list)
  (list
    (keyword)
    (int))
  (list
    (keyword)
    (int)
    (keyword)
    (int))
  (list
    (symbol))
  (list
    (symbol)
    (symbol)
    (keyword)
    (int)
    (keyword)
    (int)))
